--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Login page</h1>
-<form action="/login" method="post" th:action="@{/login}">
+<form action="/login" method="post">
     Email: <input type="email" name="username" th:name="username"><br><br>
     Password: <input type="password" name="password" th:name="password"><br><br>
     <input type="hidden" name="_csrf" th:value="${_csrf.token}">
