--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Main</h1>
-<form action="/logout" method="post">
-    <input type="hidden" name="_csrf" th:value="${_csrf.token}">
-    <input type="submit" value="Logout">
-<!--    <div sec:authorize="${user.roles.contains('ADMIN')}">-->
-    <div th:if="${isAdmin}">
-        <a href="/admin">Адмінська панель</a>
-    </div>
-</form>
+<div th:replace="header :: header"></div>
+<h1>Main page</h1>
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
