--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,7 +12,7 @@
         <ul class="navbar-nav">
             <li class="navbar-brand ms-2"><a class="navbar-brand" href="/">JustPark</a></li>
             <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-            <li class="nav-item" sec:authorize="hasRole('ADMIN')"><a class="nav-link" href="/admin">Адмінська панель</a>
+            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"><a class="nav-link" href="/admin">Адмінська панель</a>
             </li>
         </ul>
         <ul sec:authorize="isAuthenticated()" class="navbar-nav ms-auto">
