--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:replace="header :: header"></div>
 <h2>Admin page</h2>
 
 <form action="/admin/backup" method="get">
@@ -57,6 +59,6 @@
     </tr>
     </tbody>
 </table>
-
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
