--- a/src/main/resources/templates/createParking.html
+++ b/src/main/resources/templates/createParking.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Create parking</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h2>Create parking</h2>
+<div th:replace="header :: header"></div>
 
-<form action="/" method="post" th:action="@{/registration}">
-    Email: <input type="email" name="email" th:name="email"><br><br>
-    <input type="submit" value="Register"/>
+<h2>Create parking</h2>
+<form>
+
+</form>
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
