--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg ms-2 me-2 navbar-light bg-light">
         <ul class="navbar-nav">
             <li class="navbar-brand ms-2"><a class="navbar-brand" href="/">JustPark</a></li>
-            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+            <li class="nav-item" sec:authorize="hasAuthority('USER')"><a class="nav-link" th:href="@{/parkings/{userId}(userId=${currentUser.getId()})}" >Паркінги</a></li>
             <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"><a class="nav-link" href="/admin">Адмінська панель</a>
             </li>
         </ul>
