--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:replace="header :: header"></div>
 <h1>Login page</h1>
 <form action="/login" method="post">
     Email: <input type="email" name="username" th:name="username"><br><br>
@@ -12,5 +14,6 @@
     <input type="submit" value="Login"/>
 </form>
 <a href="/registration">Register</a>
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
