--- a/src/main/resources/templates/parkings.html
+++ b/src/main/resources/templates/parkings.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Your parkings</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<a href="createParking.html">Create new</a>
+<div th:replace="header :: header"></div>
+<a th:href="@{create/{userId}(userId=${currentUser.getId()})}">Create new</a>
 <h2>Your parkings:</h2>
 <ul>
     <li th:each="parking : ${parkingList}">
         <span th:text="${parking.getTitle()}"></span>
     </li>
 </ul>
-
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
