--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,8 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Registration</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
+<div th:replace="header :: header"></div>
+
 <h1>Registration</h1>
 <h3 th:if="${errorMessage}" th:text="${errorMessage}"></h3>
 <form action="/registration" method="post" th:action="@{/registration}">
@@ -17,5 +20,6 @@
     <input type="hidden" name="_csrf" th:value="${_csrf.token}">
     <input type="submit" value="Register"/>
 </form>
+<div th:replace="footer :: footer"></div>
 </body>
 </html>
