added parkingLot creating page and fixed some bugs

--- a/src/main/resources/templates/parkings.html
+++ b/src/main/resources/templates/parkings.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div th:replace="header :: header"></div>
-<button class="btn btn-primary ms-2 mt-2" th:href="@{create/{userId}(userId=${currentUser.getId()})}">Create new
-</button>
-<h2>Your parkings:</h2>
+<a class="btn btn-primary ms-2 mt-2" th:href="@{create/{userId}(userId=${currentUser.getId()})}">Створити</a>
+
+<h2>Ваші паркінги:</h2>
 <div class="container d-flex justify-content-center">
     <table class="table table-bordered">
         <thead>
@@ -21,6 +21,7 @@
             <th>Ціна (за замовчуванням)</th>
             <th>Ціна (VIP)</th>
             <th>Переглянути оцінки</th>
+            <th>Паркомісця</th>
         </tr>
         </thead>
         <tbody>
@@ -32,6 +33,7 @@
             <td th:text="${parking.priceDefault}"></td>
             <td th:text="${parking.priceVip}"></td>
             <td><a th:href="@{/parkings/rating/{parkingId}(parkingId=${parking.id})}">Рейтинг</a></td>
+            <td><a th:href="@{/parkings/lots/{parkingId}(parkingId=${parking.id})}">Паркомісця</a></td>
         </tr>
         </tbody>
     </table>
