--- a/src/main/resources/templates/createParkingLot.html
+++ b/src/main/resources/templates/createParkingLot.html
@@ -5,7 +5,7 @@
     <title>Create parking lot</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div th:replace="header :: header"></div>
 
 <div class="container d-flex justify-content-center">
