--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,8 +4,8 @@
     <title>footer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
-<footer class="bg-dark text-light text-center py-3 fixed-bottom">
+<body class="container d-flex flex-column min-vh-100">
+<footer class="bg-info-subtle text-dark text-center py-2 mt-auto">
     <p>&copy; 2023 JustPark. All rights reserved.</p>
 </footer>
 </body>
