--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg ms-2 me-2 navbar-light bg-light">
+<header class="bg-dark">
+    <nav class="navbar navbar-expand-lg ms-2 me-2">
         <ul class="navbar-nav">
-            <li class="navbar-brand ms-2"><a class="navbar-brand" href="/">JustPark</a></li>
-            <li class="nav-item" sec:authorize="hasAuthority('USER')"><a class="nav-link" th:href="@{/parkings/{userId}(userId=${currentUser.getId()})}" >Паркінги</a></li>
-            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"><a class="nav-link" href="/admin">Адмінська панель</a>
+            <li class="navbar-brand ms-2"><a class="navbar-brand text-white" href="/"><b>JustPark</b></a></li>
+            <li class="nav-item" sec:authorize="hasAuthority('USER')"><a class="nav-link text-white" th:href="@{/parkings/{userId}(userId=${currentUser.getId()})}" ><b>Паркінги</b></a></li>
+            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"><a class="nav-link text-white" href="/admin"><b>Адмінська панель</b></a>
             </li>
         </ul>
         <ul sec:authorize="isAuthenticated()" class="navbar-nav ms-auto">
