--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,20 @@
     <title>Main page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div th:replace="header :: header"></div>
-<h1>Main page</h1>
+<div class="container mt-5">
+    <h1 class="text-center">Ласкаво просимо в систему автоматизації паркувальних місць JustPark</h1>
+    <p class="lead text-center">Ми надаємо послуги автоматизації та контролю паркувальних місць.</p>
+</div>
+
+<div class="container d-flex justify-content-center">
+    <h3 class="lead">Для початку користування зараєструйтесь або зв'яжіться з менеджером за номером:</h3>
+</div>
+<div class="container d-flex justify-content-center">
+    <h4 class="lead">+380509127643</h4>
+</div>
+
 <div th:replace="footer :: footer"></div>
 </body>
 </html>
