--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,16 +4,22 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div th:replace="header :: header"></div>
-<h1>Login page</h1>
-<form action="/login" method="post">
-    Email: <input type="email" name="username" th:name="username"><br><br>
-    Password: <input type="password" name="password" th:name="password"><br><br>
-    <input type="hidden" name="_csrf" th:value="${_csrf.token}">
-    <input type="submit" value="Login"/>
-</form>
-<a href="/registration">Register</a>
+<h1 class="container d-flex justify-content-center mt-5">Авторизація</h1>
+<div class="container d-flex justify-content-center">
+    <form action="/login" method="post">
+        <label for="username" class="form-label"> Email</label>
+        <input class="form-control" type="email" id="username" name="username" th:name="username"><br><br>
+        <label for="password" class="form-label">Password</label>
+        <input class="form-control" type="password" id="password" name="password" th:name="password"><br><br>
+        <input type="hidden" name="_csrf" th:value="${_csrf.token}">
+        <input class="btn btn-primary mt-0" type="submit" value="Вхід"/>
+    </form>
+</div>
+<div class="container d-flex justify-content-center mt-2">
+    <a href="/registration">Зареєструватись</a>
+</div>
 <div th:replace="footer :: footer"></div>
 </body>
 </html>
