--- a/src/main/resources/templates/parkingRating.html
+++ b/src/main/resources/templates/parkingRating.html
@@ -5,7 +5,7 @@
     <title>Parking rating</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div th:replace="header :: header"></div>
 <h2 th:text="'Оцінка вашого паркінгу ' + ${rating}"></h2>
 
