--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Редагування ролей</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h2>Редагування ролей</h2>
+<div th:replace="header :: header"></div>
 
-<form th:action="@{'/admin/user/edit/' + ${userToEdit.id}}" method="post">
-    <div th:each="role : ${roles}">
-        <label>
-            <input type="checkbox" th:name="${role}" th:checked="${userToEdit.roles.contains(role)}"/>
-            <span th:text="${role} "></span>
-        </label>
+<div class="d-flex flex-column min-vh-100">
+    <h2>Редагування ролей</h2>
+    <div class="container d-flex justify-content-center">
+
+        <form th:action="@{'/admin/user/edit/' + ${userToEdit.id}}" method="post">
+            <div th:each="role : ${roles}">
+                <label>
+                    <input class="form-check-input" type="checkbox" th:name="${role}"
+                           th:checked="${userToEdit.roles.contains(role)}"/>
+                    <span th:text="${role} "></span>
+                </label>
+            </div>
+            <input type="hidden" th:value="${user.id}" name="userId"/>
+            <input type="hidden" th:value="${_csrf.token}" name="_csrf"/>
+            <button class="btn btn-primary mt-2" type="submit">Зберегти</button>
+        </form>
     </div>
-    <input type="hidden" th:value="${user.id}" name="userId"/>
-    <input type="hidden" th:value="${_csrf.token}" name="_csrf"/>
-    <button type="submit">Зберегти</button>
-</form>
-
+    <div th:replace="footer :: footer"></div>
+</div>
 </body>
 </html>
