--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
-<div th:replace="header :: header"></div>
+<div th:replace="header.html :: header"></div>
 <h1 class="container d-flex justify-content-center mt-5">Авторизація</h1>
 <div class="container d-flex justify-content-center">
     <form action="/login" method="post">
